src-errormsg/E11-MissingPatternParens/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E11-MissingPatternParens/Plinth.hs:15:1: error: [GHC-91938]
    equations for ‘foldList’ have different numbers of arguments
      /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E11-MissingPatternParens/Plinth.hs:15:1-24
      /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E11-MissingPatternParens/Plinth.hs:17:1-54
   |
15 | foldList _ acc Nil = acc
   | ^^^^^^^^^^^^^^^^^^^^^^^^...
